<resources>
    <string name="app_name">Open Legend Roller</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_character">New</string>
    <string name="import_character">Import</string>
    <string name="import_dialog_title">Import character from HeroMuster</string>
    <string name="attributes">Attributes</string>
    <string name="roll">Roll</string>
    <string name="reimport">Re-import as copy</string>
    <string name="attribute_score">Attribute Score</string>
    <string name="advantage">Advantage</string>
    <string name="ad_hoc_damage">Ad hoc damage (no d20)</string>
    <string name="destructive_trance">Destructive Trance</string>
    <string name="vicious_strike">Vicious Strike</string>
    <string name="legal">This product was created under the Open Legend Community License and contains material that is copyright to Seventh Sphere Entertainment. Such use of Seventh Sphere Entertainment materials in this product is in accordance with the Open Legend Community License and shall not be construed as a challenge to the intellectual property rights reserved by Seventh Sphere Entertainment. Seventh Sphere Entertainment and Open Legend RPG and their respective logos are trademarks of Seventh Sphere Entertainment in the U.S.A. and other countries.</string>
</resources>